--- a/IndoorPositioningSystem/app/src/main/AndroidManifest.xml
+++ b/IndoorPositioningSystem/app/src/main/AndroidManifest.xml
@@ -17,10 +17,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <meta-data android:name="android.app.searchable"
-            android:resource="@xml/searchable"></meta-data>
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,11 +26,7 @@
         </activity>
 
         <service
-            android:name=".PositioningService"
-            android:enabled="true"
-            android:exported="true" />
-        <service
-            android:name=".CalibrationService"
+            android:name=".UserPositionService"
             android:enabled="true"
             android:exported="true" />
 
@@ -41,8 +34,8 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
-        <activity android:name=".AddVenueActivity"
-            android:label="Add venue"></activity>
+        <activity android:name=".AddVenueActivity"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
